[gd_scene load_steps=12 format=3 uid="uid://uk4sbcpf5kgb"]

[ext_resource type="Texture2D" uid="uid://d15ngvl61it2n" path="res://assets/uisprites/background for oneshot.png" id="1_50gtv"]
[ext_resource type="Script" path="res://scripts/shop.gd" id="1_kehe3"]
[ext_resource type="Texture2D" uid="uid://cb5j3d42avxsy" path="res://assets/uisprites/background fo permanent upgrade.png" id="2_hxdhc"]
[ext_resource type="Texture2D" uid="uid://dpks22tjfbuun" path="res://assets/uisprites/permanentfirerateupgrade.png" id="2_mmnix"]
[ext_resource type="Texture2D" uid="uid://dql7bpescj4ex" path="res://assets/uisprites/permanentscanupgrade.png" id="4_6qcpn"]
[ext_resource type="FontFile" uid="uid://c0lb36ttk6adx" path="res://fonts/KiwiSoda.ttf" id="4_nqagg"]
[ext_resource type="Texture2D" uid="uid://dieewvsv1qy1" path="res://assets/uisprites/permanentScanTimeUpgrade.png" id="5_fegfv"]
[ext_resource type="Texture2D" uid="uid://dhuqudy6djddf" path="res://assets/uisprites/scan radius upgrade.png" id="6_gqkvc"]
[ext_resource type="Texture2D" uid="uid://dr72v67qcau4x" path="res://assets/uisprites/increasegunneramountupgrade.png" id="7_fnhno"]
[ext_resource type="Texture2D" uid="uid://gdsnu5qjjgpg" path="res://assets/uisprites/increasespotteramountupgrade.png" id="8_bywal"]
[ext_resource type="FontFile" uid="uid://bf2dxl6qfkmqk" path="res://fonts/I-pixel-u.ttf" id="11_ji3lm"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kehe3")
upgrade1Desc = "Decreases scanner cooldown by [color=yellow]20%[/color]. can be upgraded [color=cyan]indefinitely"
upgrade2Desc = "Increases scan duration by [color=yellow]35%[/color]. Can be upgraded [color=cyan]indefinitely[/color]."
upgrade3Desc = "Increases firerate by [color=yellow]15%[/color]. Can be upgraded [color=cyan]indefinitely."
upgrade4Desc = "[color=yellow]Doubles[/color] scan radius. Can be upgraded [color=cyan]once[/color]."
upgrade5Desc = "Creates [color=yellow]ONE SCANNER[/color]. Automatically scans fish and detects [color=red]terrorists[/color]."
upgrade6Desc = "Creates [color=yellow]ONE GUNNER[/color]. Automatically shoots confirmed [color=red]terrorists[/color]."

[node name="Perma" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("1_50gtv")

[node name="FireRate" type="TextureButton" parent="Perma"]
layout_mode = 0
offset_left = 67.0
offset_top = 7.0
offset_right = 92.0
offset_bottom = 32.0
texture_normal = ExtResource("2_mmnix")

[node name="FRPrice" type="Label" parent="Perma/FireRate"]
layout_mode = 0
offset_left = 10.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("4_nqagg")
text = "10"

[node name="SpotterCooldown" type="TextureButton" parent="Perma"]
layout_mode = 0
offset_left = 39.0
offset_top = 12.0
offset_right = 59.0
offset_bottom = 32.0
texture_normal = ExtResource("5_fegfv")

[node name="SUPrice" type="Label" parent="Perma/SpotterCooldown"]
layout_mode = 0
offset_left = 5.0
offset_top = 20.0
offset_right = 45.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("4_nqagg")
text = "10"

[node name="ScanCooldown" type="TextureButton" parent="Perma"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 30.0
offset_bottom = 30.0
texture_normal = ExtResource("4_6qcpn")

[node name="SCPrice" type="Label" parent="Perma/ScanCooldown"]
layout_mode = 0
offset_left = 2.0
offset_top = 22.0
offset_right = 42.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("4_nqagg")
text = "10
"

[node name="One" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_hxdhc")

[node name="ScanRadius" type="TextureButton" parent="One"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 31.0
offset_bottom = 30.0
texture_normal = ExtResource("6_gqkvc")

[node name="SRPrice" type="Label" parent="One/ScanRadius"]
layout_mode = 0
offset_left = 3.0
offset_top = -18.0
offset_right = 43.0
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("4_nqagg")
text = "10
"

[node name="GoonGunner" type="TextureButton" parent="One"]
layout_mode = 0
offset_left = 68.0
offset_top = 10.0
offset_right = 88.0
offset_bottom = 30.0
texture_normal = ExtResource("7_fnhno")

[node name="GGPrice" type="Label" parent="One/GoonGunner"]
layout_mode = 0
offset_left = 6.0
offset_top = -17.0
offset_right = 41.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("4_nqagg")
text = "10
"

[node name="GoonSpotter" type="TextureButton" parent="One"]
layout_mode = 0
offset_left = 40.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 30.0
texture_normal = ExtResource("8_bywal")

[node name="GSPrice" type="Label" parent="One/GoonSpotter"]
layout_mode = 0
offset_left = 2.0
offset_top = -17.0
offset_right = 31.0
offset_bottom = -1.0
theme_override_fonts/font = ExtResource("4_nqagg")
text = "10
"

[node name="Tooltip" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 48.0
offset_right = 174.0
offset_bottom = 88.0
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="tooltip text" type="RichTextLabel" parent="Tooltip"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 104.0
offset_bottom = 38.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("11_ji3lm")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "Creates [color=yellow]ONE GUNNER[/color]. Automatically shoots confirmed [color=red]terrorists[/color]."

[connection signal="button_up" from="Perma/FireRate" to="." method="_on_fire_rate_button_up"]
[connection signal="mouse_entered" from="Perma/FireRate" to="." method="_on_fire_rate_mouse_entered"]
[connection signal="button_up" from="Perma/SpotterCooldown" to="." method="_on_spotter_cooldown_button_up"]
[connection signal="mouse_entered" from="Perma/SpotterCooldown" to="." method="_on_spotter_cooldown_mouse_entered"]
[connection signal="button_up" from="Perma/ScanCooldown" to="." method="_on_scan_cooldown_button_up"]
[connection signal="mouse_entered" from="Perma/ScanCooldown" to="." method="_on_scan_cooldown_mouse_entered"]
[connection signal="button_up" from="One/ScanRadius" to="." method="_on_scan_radius_button_up"]
[connection signal="mouse_entered" from="One/ScanRadius" to="." method="_on_scan_radius_mouse_entered"]
[connection signal="button_up" from="One/GoonGunner" to="." method="_on_goon_press" binds= ["gunner"]]
[connection signal="mouse_entered" from="One/GoonGunner" to="." method="_on_goon_gunner_mouse_entered"]
[connection signal="button_up" from="One/GoonSpotter" to="." method="_on_goon_press" binds= ["spotter"]]
[connection signal="mouse_entered" from="One/GoonSpotter" to="." method="_on_goon_spotter_mouse_entered"]
